# stl-thumb

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml  libstl_thumb.h  obj-thumb.thumbnailer  stl-thumb-mime.xml  stl-thumb.thumbnailer
.cargo/: config.toml
.github/workflows/: build-ci.yml  sources.list
.rpm/: stl-thumb.spec
Windows/: STLThumbWindows.sln
Windows/STLThumbInstaller/: Product.wxs  STLThumbInstaller.wixproj
Windows/STLThumbSetupBundle/: Bundle.wxs  LICENSE.rtf  STLThumbSetupBundle.wixproj
Windows/STLThumbWinShellExtension/: ClassFactory.cpp  ClassFactory.h  GlobalExportFunctions.def  ReadMe.txt  Reg.cpp  Reg.h  STLThumbWinShellExtension.vcxproj  STLThumbWinShellExtension.vcxproj.filters  STLThumbnailProvider.cpp  STLThumbnailProvider.h  dllmain.cpp
benches/: benchmarks.rs  benchy.rs  cube.rs  cube_benchmark.rs  shipwreck.rs
src/: config.rs  fxaa.rs  lib.rs  main.rs  mesh.rs  model.frag  model.vert  model_macos.frag  model_macos.vert
src/shaders/: fxaa.frag  fxaa.vert  model.frag  model.vert
test_data/: README.md  cube.3mf  cube.stl  sphere.stl
