[package]
name = "stl-thumb"
version = "0.4.1"
authors = ["Tyler Anderson <unlimitedbacon@gmail.com>"]
description = "A fast lightweight thumbnail generator for STL files"
readme = "README.md"
repository = "https://github.com/unlimitedbacon/stl-thumb"
license = "MIT"

[lib]
name = "stl_thumb"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "stl-thumb"
path = "src/main.rs"

[badges]
travis-ci = { repository = "unlimitedbacon/stl-thumb" }

[dependencies]
cgmath = { version = "0.18.0", features = ["mint"] }
clap = "3.1.9"
glium = "0.31.0"
image = "0.24.1"
libc = "0.2"
log = "0.4.16"
mint = "0.5.9"
stderrlog = "0.5.1"
stl_io = "0.6.0"

[patch.crates-io]
glutin = { git = 'https://github.com/unlimitedbacon/glutin.git' }

[build-dependencies]
cbindgen = "0.18.*"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "benchmarks"
harness = false

[package.metadata.deb]
license-file = ["LICENSE", "3"]
depends = "libgl1, libc6, libgcc1, libosmesa6-dev"
extended-description = """\
Stl-thumb is a fast lightweight thumbnail generator for STL files. \
It can show previews for STL files in your file manager on Linux and Windows. \
It is written in Rust and uses OpenGL. """
section = "graphics"
priority = "optional"
assets = [
    ["target/release/stl-thumb",        "usr/bin/",                 "755"],
    ["target/release/libstl_thumb.so",  "usr/lib/",                 "755"],
    ["target/release/libstl_thumb.a",   "usr/lib/",                 "644"],
    ["stl-thumb.thumbnailer",           "usr/share/thumbnailers/",  "644"],
    ["stl-thumb-mime.xml",              "usr/share/mime/packages/", "644"],
    ["libstl_thumb.h",                  "usr/include/",             "644"],
    ["README.md",                       "usr/share/doc/stl-thumb/", "644"],
]
